// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > has accent variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/accent"
  >
    accent link
  </a>
</DocumentFragment>
`;

exports[`Link > has default variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/default"
  >
    default link
  </a>
</DocumentFragment>
`;

exports[`Link > has error variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/error"
  >
    error link
  </a>
</DocumentFragment>
`;

exports[`Link > has info variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/info"
  >
    info link
  </a>
</DocumentFragment>
`;

exports[`Link > has link variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/link"
  >
    link link
  </a>
</DocumentFragment>
`;

exports[`Link > has neutral variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/neutral"
  >
    neutral link
  </a>
</DocumentFragment>
`;

exports[`Link > has primary variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/primary"
  >
    primary link
  </a>
</DocumentFragment>
`;

exports[`Link > has secondary variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/secondary"
  >
    secondary link
  </a>
</DocumentFragment>
`;

exports[`Link > has success variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/success"
  >
    success link
  </a>
</DocumentFragment>
`;

exports[`Link > has warning variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/warning"
  >
    warning link
  </a>
</DocumentFragment>
`;

exports[`Link > renders a link with correct label 1`] = `
<DocumentFragment>
  <a
    class="link transition-all no-underline"
    href="/home?hello=world#great"
  >
    Go Home 🏡
  </a>
</DocumentFragment>
`;

exports[`Link > renders a non internal link 1`] = `
<DocumentFragment>
  <a
    class="link transition-all no-underline"
    href="https://example.com"
  >
    Google.com
  </a>
</DocumentFragment>
`;

exports[`Link > renders an external link 1`] = `
<DocumentFragment>
  <a
    class="link transition-all no-underline"
    href="https://example.com"
    rel="noopener noreferrer"
  >
    Google.com
    <svg
      class="ml-[2px] inline"
      fill="none"
      height="15"
      name="external"
      viewBox="0 0 15 15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M3 2C2.44772 2 2 2.44772 2 3V12C2 12.5523 2.44772 13 3 13H12C12.5523 13 13 12.5523 13 12V8.5C13 8.22386 12.7761 8 12.5 8C12.2239 8 12 8.22386 12 8.5V12H3V3L6.5 3C6.77614 3 7 2.77614 7 2.5C7 2.22386 6.77614 2 6.5 2H3ZM12.8536 2.14645C12.9015 2.19439 12.9377 2.24964 12.9621 2.30861C12.9861 2.36669 12.9996 2.4303 13 2.497L13 2.5V2.50049V5.5C13 5.77614 12.7761 6 12.5 6C12.2239 6 12 5.77614 12 5.5V3.70711L6.85355 8.85355C6.65829 9.04882 6.34171 9.04882 6.14645 8.85355C5.95118 8.65829 5.95118 8.34171 6.14645 8.14645L11.2929 3H9.5C9.22386 3 9 2.77614 9 2.5C9 2.22386 9.22386 2 9.5 2H12.4999H12.5C12.5678 2 12.6324 2.01349 12.6914 2.03794C12.7504 2.06234 12.8056 2.09851 12.8536 2.14645Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </a>
</DocumentFragment>
`;
